# internal/models/workout_statistic.go
@@ -1,0 +1,11 @@
+package models
+
+import "time"
+
+type WorkoutStatistic struct {
+	baseEntity
+	UserWorkout   *UserWorkout
+	Workout       *Workout
+	WorkoutDate   *time.Time
+	ScheduledDate time.Time
+}
